--- a/addon/locale/es/LC_MESSAGES/nvda.po
+++ b/addon/locale/es/LC_MESSAGES/nvda.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: enhancedAria 1.3\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
 "POT-Creation-Date: 2017-05-08 13:43+0200\n"
-"PO-Revision-Date: 2017-05-25 20:21+0200\n"
+"PO-Revision-Date: 2017-05-25 20:24+0200\n"
 "Last-Translator: \n"
 "Language-Team: Jose Manuel Delicado <jmdaweb@hotmail.com>\n"
 "Language: es\n"
@@ -41,7 +41,7 @@ msgstr "Ajustes de aria mejorada"
 #. TRANSLATORS: report banners checkbox
 #: addon\globalPlugins\enhancedAria.py:85
 msgid "Report banners"
-msgstr "Indicar títulos (báners)"
+msgstr "Indicar títulos"
 
 #. TRANSLATORS: report main content checkbox
 #: addon\globalPlugins\enhancedAria.py:89
