--- a/addon/locale/es/LC_MESSAGES/nvda.po
+++ b/addon/locale/es/LC_MESSAGES/nvda.po
@@ -5,17 +5,17 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: enhancedAria 1.3\n"
+"Project-Id-Version: enhancedAria 2.0\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
 "POT-Creation-Date: 2017-05-08 13:43+0200\n"
-"PO-Revision-Date: 2017-05-25 20:24+0200\n"
-"Last-Translator: \n"
-"Language-Team: Jose Manuel Delicado <jmdaweb@hotmail.com>\n"
+"PO-Revision-Date: 2018-05-12 18:10+0200\n"
+"Last-Translator: José Manuel Delicado <jmdaweb@hotmail.com>\n"
+"Language-Team: Jose Manuel Delicado <jm.delicado@nvda.es>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.0.7\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: ISO-8859-1\n"
 
@@ -98,7 +98,7 @@ msgid ""
 "It has support for extra aria landmarks which are not included by default in "
 "NVDA."
 msgstr ""
-"Este complemento te permite especificar qué puntos de referencia aria serán "
+" Este complemento te permite especificar qué puntos de referencia aria serán "
 "verbalizados cuando explores un sitio web.\n"
 "Tiene soporte para puntos de referencia extra que no vienen incluidos por "
 "defecto en NVDA."
